--- a/Ansible/nginx.yml
+++ b/Ansible/nginx.yml
@@ -1,9 +1,11 @@
 - name: installtion and configuraiton of nginx
   hosts: all
   tasks:
-     -name: installtion of nginx
-      apt: name=nginx state=latest
-     -name: starting of nginx service
+    - name: installtion of nginx
+      yum:
+         name: nginx
+         state: present
+    - name: starting of nginx service
       service:
           name: nginx
           state: started
